# Loom

./: .editorconfig-checker.json  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .prettierignore  .pylintrc  .secretsignore  .test_durations  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  License.txt  README.md  THIRD-PARTY-LICENSES.md  THIRD-PARTY.md  devenv.nix  devenv.yaml  publiccode.yml  pyproject.toml  pytest.ini  renovate.json  skaffold.yaml  typos.toml  up.sh  vars.sh
backend/api/: Dockerfile  README.md  main.py  pyproject.toml
backend/api/api/: api.py  dependencies.py  main.py  metrics.py  patch_openapi_schema.py  settings.py  utils.py
backend/api/api/models/: archives_model.py  query_model.py  queues_model.py  statistics_model.py  tree_model.py
backend/api/api/routers/: ai.py  aitools.py  archives.py  beat.py  caching.py  celery_inspect.py  complete_estimate.py  docs.py  files.py  image_description.py  (+11 more)
backend/api/static/: .gitattributes  README.md  redoc.standalone.js  swagger-ui-bundle.js  swagger-ui.css
backend/api/tests/: conftest.py  test_aiy.py  test_api_utils.py  test_archives.py  test_beat.py  test_celery_inspect.py  test_complete_estimate_router.py  test_files.py  test_init_elasticsearch.py  test_queues.py  test_tags.py  test_websocket.py  test_websocket_service.py  test_wipe_data.py
backend/common/: README.md  pyproject.toml
backend/common/common/: celery_app.py  dependencies.py  elasticsearch.py  environment.py  settings.py
backend/common/mocks/: test_value_defaults.py
backend/common/tests/: conftest.py  test_base_repository.py  test_cache.py  test_celery_inspect_service.py  test_complete_estimate_service.py  test_encryption_service.py  test_es_repository.py  test_file_repository.py  test_file_scheduling_service.py  test_imap_service.py  test_iterhash.py  test_lazybytes_service.py  test_mongo_repository.py  test_pubsub_service.py  test_pydantic_field_paths.py  test_query_builder.py  test_queues_service.py  test_register_if_lazybytes_task.py  test_retry.py  test_sharding.py  test_unsubscribe_old_imap_folders.py  test_utils_generator.py  test_websocket_service.py
backend/crawler/: Dockerfile  README.md  main.py  pyproject.toml
backend/crawler/crawler/: dependencies.py  imap_notify_listener_service.py  main.py  minio_crawler.py  s3_crawler.py  settings.py
backend/crawler/tests/: test_imap_notify_listener_service.py  test_placeholder.py
backend/worker/: .gitignore  Dockerfile  README.md  binwalk.nix  heartbeat_scheduler.py  imagemagic-policy.xml  main.py  pyproject.toml
backend/worker/beat/: beat_health_check.py
backend/worker/magic/: email.magic
backend/worker/tests/: conftest.py  test_archive_cli_commands.py  test_archive_cli_index.py  test_archive_format.py  test_archive_memory.py  test_archive_shell.py  test_binwalk.py  test_clustering.py  test_create_archive.py  test_create_thumbnail.py  test_extractor.py  test_gz_archive.py  test_image_description.py  test_natural_language_detection.py  test_pcap.py  test_persister_base.py  test_processing_task.py  test_prompt_sanitizer.py  test_pst_archive.py  test_rag.py  test_render.py  test_secret_scan.py  test_sync_flag_to_imap.py  test_sync_flagged_emails_from_imap.py  test_sync_imap_flags.py  test_tar_archive.py  test_task_info_persister.py  test_tika_fallback.py  test_translate.py  test_xz_archive.py  test_zip_archive.py  test_zstd_archive.py
backend/worker/worker/: celery.py  dependencies.py  settings.py  tasks.py
cicd/aitools/: _common.py  claude.py  cmd_implement.py  cmd_issue_update.py  cmd_job_diagnose.py  cmd_mr_create.py  cmd_mr_describe.py  cmd_mr_fix.py  cmd_mr_review.py  cmd_mr_update.py  cmd_mr_watch.py  cmd_pipeline_retry.py  cmd_release.py  commands.py  config.py  git_helpers.py  gitlab_api.py  models.py  prompts.py  pyproject.toml
cicd/aitools/tests/: test_mr_review.py
integrationtest/: README.md  pyproject.toml
integrationtest/assets/: 2020-05-05-phishing-email-example-02.eml  attachment_content_disposition.eml  attachment_pdf.eml  basic_email.eml  empty_file.tar  file.txt.xz  file.txt.zst  hidden_file.tar  http.pcap  knn1.txt  knn2.txt  knn3.txt  knn4.txt  knn5.txt  multi_file.tar  sample.pst  sample3.docx  single_file.tar  sub_folder.tar  sub_sub_folder.tar  test_installer.msi  text.txt  text_de.txt  unicode_email.eml  very_long_email.eml
integrationtest/assets/auto_tag_files/: net1.txt  net2.txt  no_tag.txt  web1.txt  web2.txt  web_net.txt
integrationtest/assets/search_test_files/: confused_lorem_ipsum_search_file_test_6  divergent_lorem_ipsum_search_file_test_7  falsehood_lorem_ipsum_search_file_test_8  lorem_ipsum_search_file_test_2  maybe_lorem_ipsum_search_file_test_3  multilanguage_file.txt  not_lorem_ipsum_search_file_test_1  promise_lorem_ipsum_search_file_test_5  swear_lorem_ipsum_search_file_test_4
integrationtest/assets/secrets_test_files/: example_rsa_private_key  test.env
integrationtest/bats/: helpers.bash  mount-string.bats  mount-test.yaml  setup_suite.bash
integrationtest/tests/: ai_test.py  archive_test.py  auto_tag_test.py  autoretry_exhaustion_test.py  autoretry_test.py  caching_test.py  canvas_test.py  celery_inspect_service_test.py  celery_inspect_test.py  complete_estimate_test.py  conftest.py  crawler_test.py  create_archive_test.py  dead_letter_queue_test.py  deduplication_test.py  email_processor_test.py  email_test.py  es_repository_test.py  extraction_test.py  file_stats_test.py  files_tree_test.py  flush_file_storage_service_task_test.py  flush_on_idle_task_test.py  flush_root_task_info_on_idle_task_test.py  flush_s3_bucket_test.py  get_file_test.py  hide_periodically_test.py  image_description_test.py  imap_notify_listener_test.py  imap_service_test.py  lazybytes_service_test.py  messages_test.py  pit_test.py  pod_fence_test.py  pubsub_service_test.py  queues_service_test.py  queues_test.py  rag_test.py  recursion_depth_test.py  reindex_lost_files_test.py  (+20 more)
integrationtest/utils/: celery_inspect.py  consts.py  create_archive.py  fetch_from_api.py  settings.py  split_into_sentences.py  upload_asset.py  wipe_data.py
(+965 files in other folders)
