[tool.poetry]
name = "loom-overarching-dev"
package-mode = false
version = "0.1.0"
description = "Dev-only project to empower pylance to see all the subprojects"
authors = []
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
common = {path = "backend/common", develop = true}
worker = {path = "backend/worker", develop = true}
api = {path = "backend/api", develop = true}
crawler = {path = "backend/crawler", develop = true}
integrationtest = {path = "integrationtest", develop = true}
types-docker = "^7.1.0.20240601"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.0"
flake8 = "^7.0.0"
flake8-bugbear = "^24.4.26"
autoflake = "^2.3.1"
black = "^24.4.2"
docformatter = "^1.7.5"
isort = "^5.13.2"
mypy = "^1.10.0"
pylint-pydantic = "^0.3.2"
deptry = "^0.16.1"
pika = "^1.3.2"
pip-licenses = "^5.0.0"
docker = "^7.1.0"
zstandard = "^0.23.0"

[tool.poetry.group.test.dependencies]
pytest = {extras = ["celery"], version = "^8.2.0"}
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
pytest-celery = "^1.0.0"
pytest-memray = "^1.6.0"
pytest-asyncio = "^0.23.6"
freezegun = "^1.5.1"
pytest-random-order = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_to_top = ["common.environment"]

[tool.autoflake]
quiet = true
recursive = true
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.docformatter]
recursive = true
in-place = true
black = true

[tool.black]
quiet = true
