[tool.poetry]
name = "integrationtest"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
license = "MIT"
packages = [
    { include = "integrationtest" },
]

[tool.poetry.dependencies]
python = "^3.11"
loom-overarching-dev = {path = "../", develop = true}
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
websockets = "^13.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wipe_data = "utils.wipe_data:wipe_data"


#
# Modules with missing type stubs
#

[[tool.mypy.overrides]]
module = "requests_toolbelt.*"
ignore_missing_imports = true