[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
license = "MIT"
packages = [
    { include = "api" },
]

[tool.poetry.dependencies]
python = "^3.11"
common = {path = "../common", develop = true}
fastapi = "^0.115.12"
uvicorn = "^0.29.0"
python-multipart="^0.0.9"
websockets = "^12.0"
types-redis = "^4.6.0.20240425"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
