[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
license = "MIT"
packages = [
    { include = "api" },
]

[tool.poetry.dependencies]
python = "^3.11"
common = {path = "../common", develop = true}
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
python-multipart="^0.0.21"
types-redis = "^4.6.0.20240425"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
websockets = "^13.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.1"

[tool.poetry.group.test.dependencies]
#
# Declare test dependencies in the toplevel pyproject.toml
#

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#
# Modules with missing type stubs
#

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true
