[tool.poetry]
name = "common"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
license = "MIT"
packages = [
    { include = "common" }
]

[tool.poetry.dependencies]
python = "^3.11"
celery = {extras = ["redis"], version = "^5.5.0"}
celery-types = "^0.24.0"
elasticsearch = "^9.0.2"
pymongo = "^4.7.2"
luqum = "^0.14.0"
pycryptodome = "^3.20.0"
requests = "^2.31.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
libretranslatepy = "^2.1.4"
pydantic-mongo = "^2.3.0"
types-requests = "^2.31.0.20240406"
fastapi = "^0.128.0"
redis = "^5.2.0"
# despite types-redis being deprecated for redis > 5.0.0,
# we should keep this for now as the redis type hints are really bad
# see: https://www.reddit.com/r/Python/comments/1ksicim/comment/mtnlayg/
types-redis = "^4.6.0.20241004"
ollama = "^0.6.0"
imapclient = "^3.0.1"

[tool.poetry.group.test.dependencies]
#
# Declare test dependencies in the toplevel pyproject.toml
#

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


#
# Modules with missing type stubs
#

[[tool.mypy.overrides]]
module = "luqum.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "libretranslatepy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic_mongo.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "imapclient.*"
ignore_missing_imports = true