[tool.poetry]
name = "common"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
license = "MIT"
packages = [
    { include = "common" }
]

[tool.poetry.dependencies]
python = "^3.11"
celery = {extras = ["redis"], version = "5.5.3"}
celery-types = "0.24.0"
elasticsearch = "9.2.1"
pymongo = "4.16.0"
luqum = "0.14.0"
pycryptodome = "3.23.0"
requests = "2.32.5"
pydantic = "2.12.5"
pydantic-settings = "2.12.0"
libretranslatepy = "2.1.4"
pydantic-mongo = "2.4.0"
types-requests = "2.32.0.20240523"
fastapi = "0.128.8"
redis = "5.2.1"
# despite types-redis being deprecated for redis > 5.0.0,
# we should keep this for now as the redis type hints are really bad
# see: https://www.reddit.com/r/Python/comments/1ksicim/comment/mtnlayg/
types-redis = "4.6.0.20241004"
ollama = "0.6.1"
imapclient = "3.1.0"

[tool.poetry.group.test.dependencies]
#
# Declare test dependencies in the toplevel pyproject.toml
#

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


#
# Modules with missing type stubs
#

[[tool.mypy.overrides]]
module = "luqum.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "libretranslatepy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic_mongo.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "imapclient.*"
ignore_missing_imports = true