[tool.poetry]
name = "common"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
license = "MIT"
packages = [
    { include = "common" }
]

[tool.poetry.dependencies]
python = "~3.14"
celery = {extras = ["redis"], version = "5.6.3"}
celery-types = "0.24.0"
elasticsearch = "9.2.1"
luqum = "0.14.0"
pycryptodome = "3.23.0"
requests = "2.32.5"
pydantic = "2.13.4"
pydantic-settings = "2.14.2"
libretranslatepy = "2.1.4"
types-requests = "2.32.4.20260324"
fastapi = "0.128.8"
redis = "5.2.1"
# despite types-redis being deprecated for redis > 5.0.0,
# we should keep this for now as the redis type hints are really bad
# see: https://www.reddit.com/r/Python/comments/1ksicim/comment/mtnlayg/
types-redis = "4.6.0.20241004"
openai = "1.72.0"
# Using a patched fork until https://github.com/mjs/imapclient/pull/641 is merged and released,
# at which point this should be reverted to a plain version pin: imapclient = "<version>"
imapclient = {git = "https://github.com/736-c41-2c1-e464fc974/imapclient.git", rev = "ee967b861ec7b71854372fe7a20a5adc01b2d6aa"}

[tool.poetry.group.test.dependencies]
#
# Declare test dependencies in the toplevel pyproject.toml
#

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


#
# Modules with missing type stubs
#

[[tool.mypy.overrides]]
module = "luqum.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "libretranslatepy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "imapclient.*"
ignore_missing_imports = true
