[tool.poetry]
name = "crawler"
version = "0.1.0"
description = "The amabar crawler"
authors = []
readme = "README.md"
license = "MIT"
packages = [{ include = "crawler" }]


[tool.poetry.dependencies]
python = "~3.14"
common = { path = "../common", develop = true }
watchdog = "^6.0.0"
minio = "^7.2.12"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.1"

[tool.poetry.group.test.dependencies]
#
# Declare test dependencies in the toplevel pyproject.toml
#

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#
# Modules with missing type stubs
#

[[tool.mypy.overrides]]
module = "imapclient.*"
ignore_missing_imports = true
