[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
license = "MIT"
packages = [{ include = "worker" }]

[tool.poetry.dependencies]
python = "^3.11"
wand = "^0.6.13"
common = {path = "../common", develop=true}
python-magic = "^0.4.27"
stream-zip = "^0.0.83"
requests = "^2.31.0"
blobfile = "^2.1.1"
scipy = "^1.15.3"
scikit-learn = "^1.7.0"
langchain-text-splitters = "^0.3.2"
flower = "^2.0.1"
gotenberg-client = "^0.13.1"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.1"
watchdog = "^6.0.0"
scipy-stubs = "^1.15.3.0"

[tool.poetry.group.test.dependencies]
#
# Declare test dependencies in the toplevel pyproject.toml
#

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#
# Modules with missing type stubs
#

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "stream_zip.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wand.*"
ignore_missing_imports = true